@@ -214,7 +214,12 @@ static int fill_job_desc_from_opts(job_desc_msg_t *desc)
 static int set_umask_env(void)
 {
 	char mask_char[5];
-	mode_t mask = (int)umask(0);
+	mode_t mask;
+
+	if (getenv("SLURM_UMASK"))	/* use this value */
+		return SLURM_SUCCESS;
+
+	mask = (int)umask(0);
 	umask(mask);
 
 	sprintf(mask_char, "0%d%d%d", 
